# lava

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  RELEASE.md  app.py  build-requirements.txt  build.py  lif_res_lateral_inhibition.py  prebuild.py  pyproject.toml  requirements.txt  setup.py  test_resonator_process.py  weight_after_run.npy
src/lava/magma/runtime/_c_message_infrastructure/: .gitignore  CMakeLists.txt  README.md  setenv.sh
src/lava/magma/runtime/_c_message_infrastructure/cmake/: cyclonedds.cmake  fastdds.cmake  grpc_common.cmake
src/lava/magma/runtime/_c_message_infrastructure/csrc/: channel_proxy.cc  channel_proxy.h  message_infrastructure_py_wrapper.cc  port_proxy.cc  port_proxy.h
src/lava/magma/runtime/_c_message_infrastructure/csrc/actor/: posix_actor.cc  posix_actor.h
src/lava/magma/runtime/_c_message_infrastructure/csrc/channel/dds/: cyclone_dds.cc  cyclone_dds.h  dds.cc  dds.h  dds_channel.cc  dds_channel.h  dds_port.h  fast_dds.cc  fast_dds.h
src/lava/magma/runtime/_c_message_infrastructure/csrc/channel/grpc/: grpc.cc  grpc.h  (+4 more)
src/lava/magma/runtime/_c_message_infrastructure/csrc/core/: abstract_actor.cc  abstract_actor.h  abstract_channel.h  abstract_port.cc  abstract_port.h  abstract_port_implementation.cc  abstract_port_implementation.h  channel_factory.cc  channel_factory.h  common.h  message_infrastructure_logging.cc  message_infrastructure_logging.h  multiprocessing.cc  multiprocessing.h  ports.cc  ports.h  utils.h
src/lava/magma/runtime/_c_message_infrastructure/examples/c_pingpong/: CMakeLists.txt  README.md  cprocess.cc  p.py
src/lava/magma/runtime/_c_message_infrastructure/examples/ros2/: README.md  fastdds_talking_on_multihosts.md  reciever_profile.xml  sender_profile.xml  test_cyclonedds_from_ros.py  test_cyclonedds_to_ros.py  test_fastdds_from_ros.py  test_fastdds_from_ros_dvs.py  test_fastdds_from_ros_realsense.py  test_fastdds_to_ros.py  test_ros_data_getter.py  test_ros_data_getter_async.py
src/lava/magma/runtime/_c_message_infrastructure/test/: CMakeLists.txt  test_channel.cc  test_cyclonedds_from_ros.cc  test_cyclonedds_to_ros.cc  test_ddschannel.cc  test_fastdds_from_ros.cc  test_fastdds_to_ros.cc  test_grpc_delivery.cc  test_multiprocessing.cc  test_shm_delivery.cc  test_socket_delivery.cc
src/lava/magma/runtime/_c_message_infrastructure/tools/: log_merge.sh
src/lava/magma/runtime/cpp_message_infrastructure/: CMakeLists.txt  setenv.sh
src/lava/magma/runtime/cpp_message_infrastructure/docs/: run_example.md
src/lava/magma/runtime/cpp_message_infrastructure/include/: abstract_actor.h  abstract_channel.h  abstract_port.h  abstract_port_implementation.h  multiprocessing.h  ports.h  process_model.h  runtime.h  shm.h  shmem_channel.h  shmem_port.h  utils.h
src/lava/magma/runtime/cpp_message_infrastructure/src/: abstract_port_implementation.cc  message_infrastructure_py_wrapper.cc  multiprocessing.cc  ports.cc  py_wrapper.cc
src/lava/magma/runtime/cpp_message_infrastructure/test/: test_example.py
src/lava/magma/runtime/message_infrastructure/: .gitignore  CMakeLists.txt  README.md  __init__.py  close_on_shutdown_smm.py  factory.py  fix_symbol_workround.patch  interfaces.py  log_merge.sh  message_infrastructure_interface.py  message_interface_enum.py  multiprocessing.py  nx.py  ports.py  py_multiprocessing.py  py_ports.py  pyproject.toml  pypychannel.py  setenv.sh  setup.py  shared_memory_manager.py  test_channel.py  watchdog.py
src/lava/magma/runtime/message_infrastructure/cmake/: cyclonedds.cmake  fastdds.cmake  fastdds_common.cmake  get_iceoryx.py  grpc_common.cmake
src/lava/magma/runtime/message_infrastructure/csrc/: abstract_channel.h  abstract_port.h  multiprocessing.h  runtime.h  utils.h
src/lava/magma/runtime/message_infrastructure/docs/: run_example.md
src/lava/magma/runtime/message_infrastructure/examples/ros2/: README.md  test_cyclonedds_from_ros.py  test_dds_to_ros.py  test_fastdds_to_ros.py  test_ros_to_dds.py
src/lava/magma/runtime/message_infrastructure/include/: abstract_actor.h  abstract_channel.h  abstract_port.h  abstract_port_implementation.h  multiprocessing.h  ports.h  process_model.h  runtime.h  shm.h  shmem_channel.h  shmem_port.h  utils.h
src/lava/magma/runtime/message_infrastructure/message_infrastructure/: __init__.py  factory.py  message_infrastructure_interface.py  multiprocessing.py  ports.py
src/lava/magma/runtime/message_infrastructure/message_infrastructure/csrc/: abstract_actor.cc  abstract_actor.h  abstract_channel.h  abstract_port.cc  abstract_port.h  abstract_port_implementation.cc  abstract_port_implementation.h  channel_factory.h  channel_proxy.cc  channel_proxy.h  main.cc  message_infrastructure_logging.cc  message_infrastructure_logging.h  message_infrastructure_py_wrapper.cc  multiprocessing.cc  multiprocessing.h  port_proxy.c  port_proxy.cc  port_proxy.h  ports.cc  ports.h  posix_actor.cc  process_model.h  py_middle_layer.cc  py_middle_layer.h  py_middle_layer_test.h  selector.h  shm.cc  shm.h  shmem_channel.cc  shmem_channel.h  shmem_port.cc  shmem_port.h  socket.cc  socket.h  socket_channel.cc  socket_channel.h  socket_port.cc  socket_port.h  transformer.cc  (+2 more)
src/lava/magma/runtime/message_infrastructure/src/: message_infrastructure_py_wrapper.cc
src/lava/magma/runtime/message_infrastructure/test/: CMakeLists.txt  dadadasda.py  test_all_delivery.py  test_block.py  test_channel.cc  test_channel.py  test_channel_block.py  test_example.py  test_file_descriptors.py  test_grpc_channel.py  test_grpc_delivery.py  test_middle_layer.py  test_multiprocessing.cc  test_multiprocessing.py  test_shm_delivery.py  test_simple_port.py  test_single_process_channel.py  test_temp_channel.py  test_transformer.py  test_xport.py
src/lava/magma/runtime/message_infrastructure/test/cpptest/: test_channel.cc  test_cyclonedds_from_ros.cc  test_cyclonedds_to_ros.cc  test_dds_to_ros.cc  test_ddschannel.cc  test_fastdds_from_ros.cc  test_grpc_delivery.cc  test_multiprocessing.cc  test_ros_to_dds.cc  test_shm_delivery.cc  test_socket_delivery.cc  test_soket_delivery.cc
(+719 files in other folders)
