[tool.poetry]
name = "message_infrastructure"
version = "0.1.0"
description = "Message Infrastructure"
authors = ["Intel's Neuromorphic Computing Lab and the open source community <lava@intel.com>"]
license = "BSD-3-Clause or LGPL-2.1-or-later"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
pybind11 = {extras = ["global"], version = "^2.10.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.build]
script = "setup.py"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42", "wheel", "cmake>=3.12"]
build-backend = "poetry.core.masonry.api"
