<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_talk_with_dds_cpp</name>
  <version>0.0.0</version>
  <description>This package is for testing msg_lib dds port talking with ROS2 CPP node.</description>
  <maintainer email="he.xu@intel.com">root</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <depend>rclcpp</depend>
  </export>
</package>
